--- a/Tests/GetTransactionDataTestCase.xaml
+++ b/Tests/GetTransactionDataTestCase.xaml
@@ -11,6 +11,7 @@
       <x:String>System.Activities.XamlIntegration</x:String>
       <x:String>System.Collections</x:String>
       <x:String>System.Collections.Generic</x:String>
+      <x:String>System.Collections.ObjectModel</x:String>
       <x:String>System.ComponentModel</x:String>
       <x:String>System.Data</x:String>
       <x:String>System.Diagnostics</x:String>
